--- a/src/config.toml
+++ b/src/config.toml
@@ -1,6 +1,8 @@
 baseURL = "http://localhost"
 title = "K8S Operators Over EZ"
 theme = "hugo-geekdoc"
+publishDir = "../"
+
 
 # Geekdoc required configuration
 pygmentsUseClasses = true
