added lab links

--- a/src/data/menu/ansible.toml
+++ b/src/data/menu/ansible.toml
@@ -3,3 +3,9 @@
     name = "Ansible Operators"
     weight = 0   
     ref = "/ansible"
+
+[[ansible]]
+    identifier = "ansible-ops-lab"
+    name = "Lab"
+    weight = 0   
+    ref = "/ansible/lab.md"
